Interfaces basicas del engine
Co-Authored-By: Stiven Arias Giraldo <47497948+StAincrad@users.noreply.github.com>
Co-Authored-By: alsern01 <27769269+alsern01@users.noreply.github.com>

--- a/core/DesktopLauncher/build.gradle
+++ b/core/DesktopLauncher/build.gradle
@@ -6,3 +6,8 @@ java {
     sourceCompatibility = JavaVersion.VERSION_1_7
     targetCompatibility = JavaVersion.VERSION_1_7
 }
+
+dependencies {
+    implementation project(path: ':Logic')
+    implementation project(path: ':DesktopEngine')
+}
