Inicialización de la ventana

--- a/core/DesktopLauncher/build.gradle
+++ b/core/DesktopLauncher/build.gradle
@@ -10,4 +10,5 @@ java {
 dependencies {
     implementation project(path: ':Logic')
     implementation project(path: ':DesktopEngine')
+    implementation project(path: ':Engine')
 }
